+ [ui-input] add max-size prop ~ [ui-input] fix input alignment + .ui-column-spacing can use with .col-*

--- a/scss/uikit/_forms.scss
+++ b/scss/uikit/_forms.scss
@@ -48,6 +48,11 @@
 
     &--left {
       justify-content: flex-start;
+
+      // прижимаем input к правому краю
+      :last-child {
+        margin-left: auto;
+      }
     }
 
     &--right {
